Use Gradle TestKit for integration tests (#247)